--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
             cd frontend
             npm install
             npm run test          
+
   test-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -60,7 +61,41 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run test     
+            npm run test  
+
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+            keys: [frontend-scan]
+      - run:
+          name: Scan frontend
+          command:
+          cd frontend
+          npm install
+          ## npm install oauth-sign@^0.9.0
+          npm audit --audit-level=critical 
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+            keys: [backend-scan]
+      - run:
+          name: Scan backend
+          command:
+          cd backend
+          npm install
+          ## npm install oauth-sign@^0.9.0
+          npm audit --audit-level=critical         
+
+
+              
+
 
 
 workflows:
@@ -72,4 +107,8 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]    
       
