--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,12 +71,11 @@ jobs:
       - restore_cache:
             keys: [frontend-scan]
       - run:
-          name: Scan frontend
+          name : scan frontend
           command:
-            cd frontend
-            npm install
-            ## npm install oauth-sign@^0.9.0
-            npm audit --audit-level=critical 
+              cd frontend
+              npm install
+              npm audit --audit-level=critical 
 
   scan-backend:
     docker:
@@ -86,17 +85,11 @@ jobs:
       - restore_cache:
             keys: [backend-scan]
       - run:
-          name: Scan backend
+          name : scan backend
           command:
-            cd backend
-            npm install
-            ## npm install oauth-sign@^0.9.0
-            npm audit --audit-level=critical         
-
-
-              
-
-
+              cd backend
+              npm install
+              npm audit --audit-level=critical            
 
 workflows:
   default:
