--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           name : scan frontend
           command:
             cd frontend
-            npm audit fix --audit-level=critical --force
+            npm audit fix --force
 
   scan-backend:
     docker:
@@ -87,7 +87,7 @@ jobs:
           name : scan backend
           command:
             cd backend
-            npm audit fix --audit-level=critical --force   
+            npm audit fix --force   
 
 workflows:
   default:
