--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,7 @@ jobs:
           name : scan frontend
           command: |
             cd frontend
+            npm install
             npm audit fix --audit-level=critical --force
 
   scan-backend:
