--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,24 @@
 version: 2.1
-orbs:
-  slack: circleci/slack@4.1           
+
+commands:
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      - name: WORKFLOW_ID
+        description: CircleCI workflow ID
+        type: string   
+    steps:
+      steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            # Destroy back-end stack
+            aws cloudformation delete-stack --stack-name "udapeople-backend-${WORKFLOW_ID:0:7}"
+            # Destroy front-end stack
+            aws cloudformation delete-stack --stack-name "udapeople-frontend-${WORKFLOW_ID:0:7}"
+            exit 1
+
 jobs:
   build-frontend:
     docker:
@@ -91,6 +109,42 @@ jobs:
             cd backend
             npm audit fix --audit-level=critical --force
 
+  deploy-infrastructure:
+    docker: amazon/aws-cli
+      # Docker image here that supports AWS CLI
+    steps:
+      - checkout
+      - apk add --update git tar gzip #Checkout code from git, and install tar and gzip
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
+              --tags project=udapeople
+              --exit 1  
+      - run:
+          name: Ensure front-end infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              #--tags project=your-tag \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
+              --tags project=udapeople
+              --exit 1
+      - run:
+          name: Add back-end ip to ansible inventory
+          command: |
+            # Your code here
+            exit 1
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible/inventory.txt
+      # Here's where you will add some code to rollback on failure             
+
 workflows:
   default:
     jobs:
@@ -103,5 +157,10 @@ workflows:
       - scan-backend:
           requires: [build-backend]
       - scan-frontend:
-          requires: [build-frontend]    
+          requires: [build-frontend]  
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [test-feature-branch]      
       
