--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,10 @@ commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      - name: WORKFLOW_ID
+      WORKFLOW_ID:
         description: CircleCI workflow ID
-        type: string   
-    steps:
-      steps:
+        type: string
+  steps:
       - run:
           name: Destroy environments
           when: on_fail
@@ -123,7 +122,7 @@ jobs:
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
               --tags project=udapeople
-              --exit 1  
+              
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -133,12 +132,14 @@ jobs:
               #--tags project=your-tag \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
               --tags project=udapeople
-              --exit 1
+              
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            # Your code here
-            exit 1
+            BACKEND_IP=$(aws cloudformation describe-stacks --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" --query "Stacks[0].Outputs[?OutputKey=='BackendIP'].OutputValue" --output text)
+            echo "[backend]" > project/.circleci/ansible/inventory.txt
+            echo "backend ansible_host=$BACKEND_IP" >> project/.circleci/ansible/inventory.txt
+          when: on_success
       - persist_to_workspace:
           root: ~/
           paths:
