--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update git tar gzip 
+            yum -y install tar gzip
       - run:
           name: Ensure back-end infrastructure exists
           command: |
