--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,13 +137,13 @@ jobs:
           name: Add back-end ip to ansible inventory
           command: |
             BACKEND_IP=$(aws cloudformation describe-stacks --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" --query "Stacks[0].Outputs[?OutputKey=='BackendIP'].OutputValue" --output text)
-            echo "[backend]" > project/.circleci/ansible/inventory.txt
-            echo "backend ansible_host=$BACKEND_IP" >> project/.circleci/ansible/inventory.txt
+            cd .circleci/ansible/inventory.txt
+            echo "backend ansible_host=$BACKEND_IP" >> .circleci/ansible/inventory.txt
           when: on_success
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - .circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure             
 
 workflows:
