--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,10 +141,12 @@ jobs:
             echo "backend ansible_host=$BACKEND_IP" >> .circleci/ansible/inventory.txt
           when: on_success
       - persist_to_workspace:
-          root: ~/
+          root: .
           paths:
             - .circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure             
+      - destroy_environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail             
 
 workflows:
   default:
