--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,8 @@ jobs:
           root: .
           paths:
             - .circleci/ansible/inventory.txt
-      - destroy_environment:
+      - destroy-environment:
+
           id: ${CIRCLE_WORKFLOW_ID:0:7}
           when: on_fail             
 
