--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      WORKFLOW_ID:
+      CIRCLE_WORKFLOW_ID:
         type: string
     steps:
       - run:
