--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,29 @@ jobs:
             - .circleci/ansible/inventory.txt
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail             
+          when: on_fail  
+  configure-infrastructure:
+    docker:
+      image: ansible/ansible:latest
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["fd:5e:93:0d:93:89:ff:12:ee:3a:d5:fc:1d:d2:bd:27"]
+       - attach_workspace:
+          at: .
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible
+            ansible --version
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt configure-server.yml
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail                        
 
 workflows:
   default:
@@ -163,5 +185,7 @@ workflows:
       - scan-frontend:
           requires: [build-frontend]  
       - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]   
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]       
       
