--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ jobs:
           when: on_fail  
   configure-infrastructure:
     docker:
-      image: ansible/ansible:latest
+      - image: ansible/ansible:latest
     steps:
       - checkout
       - add_ssh_keys:
