--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
         
   configure-infrastructure:
     docker:
-      - image: ansible/ansible:latest
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
