--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
         
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python
     steps:
       - checkout
       - add_ssh_keys:
@@ -187,6 +187,9 @@ workflows:
           requires: [build-frontend]  
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]       
       
