--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,9 +12,47 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
 
+  pre_tasks:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      wait_for:
+        timeout: 600
+        host: "{{ inventory_hostname }}"
+        port: 22
+      delegate_to: localhost  # Wait on the Ansible controller host
+
+
   roles:
-    - configure-server
-    - configure-prometheus-node-exporter
+    - name: "Install Python and Update Packages"
+      tasks:
+        - name: Install Python for Ansible
+          raw: apt-get update && apt-get install -y python3-pip
+          become: true
+
+        - name: Update package cache
+          apt:
+            update_cache: yes
+          become: true
+
+        - name: Upgrade all packages
+          apt:
+            upgrade: dist
+            autoremove: yes
+          become: true
+          
+    - name: "Install Node.js and PM2"
+      tasks:
+        - name: Install Node.js and npm
+          apt:
+            name: ["nodejs", "npm"]
+            state: latest
+          become: true
+
+        - name: Install PM2
+          npm:
+            name: pm2
+            global: yes
+          become: true      
+
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
