--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -22,36 +22,7 @@
 
 
   roles:
-    - name: "Install Python and Update Packages"
-      tasks:
-        - name: Install Python for Ansible
-          raw: apt-get update && apt-get install -y python3-pip
-          become: true
-
-        - name: Update package cache
-          apt:
-            update_cache: yes
-          become: true
-
-        - name: Upgrade all packages
-          apt:
-            upgrade: dist
-            autoremove: yes
-          become: true
-          
-    - name: "Install Node.js and PM2"
-      tasks:
-        - name: Install Node.js and npm
-          apt:
-            name: ["nodejs", "npm"]
-            state: latest
-          become: true
-
-        - name: Install PM2
-          npm:
-            name: pm2
-            global: yes
-          become: true      
+    - configure-server      
 
 
   # Get the environment variables from CircleCI and add to the EC2 instance
