--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,10 +139,9 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --filters "Name=tag:project,Values=udapeople" \
               --output text >> inventory
-            cat inventory
-          when: on_success
+         
       - persist_to_workspace:
           root: .
           paths:
