--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,15 +140,12 @@ jobs:
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:project,Values=udapeople" \
-              --output text >> inventory
+              --output text >> inventory.txt
          
       - persist_to_workspace:
-          root: .
+          root: .circleci/ansible/  
           paths:
-            - .circleci/ansible/inventory
-
-      - attach_workspace:
-          at: .      
+            - inventory.txt  
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
