--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:project,Values=udapeople" \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text >> inventory.txt 2>&1
          
       - persist_to_workspace:
@@ -149,7 +149,9 @@ jobs:
 
       - run:
           name: Display inventory.txt content
-          command: cat inventory.txt      
+          command: |
+            echo "File Path: $PWD/inventory.txt"
+            cat inventory.txt       
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
