--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,11 +142,16 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text >> inventory.txt 2>&1
+
+      - run:
+          name: Move inventory.txt to .circleci/ansible
+          command: |
+            mv /tmp/inventory.txt .circleci/ansible/inventory.txt        
          
       - persist_to_workspace:
-          root: .circleci/ansible/  
+          root: .  
           paths:
-            - inventory.txt  
+            - circleci/ansible/inventory.txt  
 
       - run:
           name: Display inventory.txt content
