--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,7 +141,11 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text)
-                echo $BACKEND_IP >> inventory.txt      
+                echo $BACKEND_IP >> inventory.txt 
+
+      - store_artifacts:
+          path: /root/project/inventory.txt
+          destination: inventory               
        
       - persist_to_workspace:
           root: .  
