--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,12 +137,13 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
+              echo -e "[web]\n" > ./.circleci/ansible/inventory  
               BACKEND_IP=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text)
-                echo $BACKEND_IP >> ./.circleci/ansible/inventory.txt 
-                cat inventory.txt
+                echo $BACKEND_IP >> ./.circleci/ansible/inventory 
+                cat ./.circleci/ansible/inventory
 
       #- store_artifacts:
           #path: /root/project/inventory.txt
@@ -151,7 +152,7 @@ jobs:
       - persist_to_workspace:
           root: .  
           paths:
-            - .circleci/ansible/inventory.txt  
+            - .circleci/ansible/inventory
 
       #- run:
           #name: Display inventory.txt content
