--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,8 +166,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
-            ansible --version
+            apk add --update --no-cache tar gzip ansible aws-cli
+
       - run:
           name: Configure server
           command: |
