--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip ansible aws-cli
+            apk add --update ansible
+            ansible --version
 
       - run:
           name: Configure server
