--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,19 +166,17 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk update
+            apk add --update ansible openssh
             apk add --update ansible
-            apk add openssh-client
             ansible --version
 
       - run:
           name: Configure server
           command: |
             cd .circleci/ansible
-            ansible-playbook -vvvv -i inventory -c ssh configure-server.yml 
+            ansible-playbook -i inventory configure-server.yml -vvv
 
                           
-
 workflows:
   default:
     jobs:
