--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -13,7 +13,21 @@
     - ansible_connection: ssh
     - ansible_stdout_callback: yaml
 
+  pre_tasks:
+    - name: "Wait 600 seconds for target connection to become reachable/usable."
+      wait_for:
+        host: "{{ inventory_hostname }}"
+        port: 22
+        delay: 10
+        timeout: 600
+      become: false
 
+    - name: "Install Python for Ansible."
+      apt:
+        name: python3-pip
+        state: present
+      become: true
+      
   roles:
     - configure-server  
 
