--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,11 +166,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum update
-            yum install -y tar gzip unzip
-            yum -y install http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-            yum -y install ansible
-            
+            apk update
+            apk add --update ansible openssh
+            ansible --version
+
       - attach_workspace:
           at: ~/      
 
