--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -13,13 +13,19 @@
     - ansible_connection: ssh
     - ansible_stdout_callback: yaml
 
-  roles:
-    - configure-server  
+   pre_tasks:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      wait_for_connection:
+        delay: 5
+        timeout: 600
 
-  tasks:
-    - name: Debug Task
-      debug:
-        var: error_var      
+    - name: "install python for Ansible."
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false  
+
+  roles:
+    - configure-server       
 
 
   # Get the environment variables from CircleCI and add to the EC2 instance
