--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,5 +226,7 @@ workflows:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]  
+      - run-migrations:
+          requires: [configure-infrastructure]    
            
       
