--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,13 +204,13 @@ jobs:
               if grep -q "has been executed successfully." ~/project/backend/migrations_log.txt
               then
                 echo "insecure" >> ~/.curlrc
-                curl https://kvdb.io/XxBcBNhfFbtVNeqcJ6byw5/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                curl https://kvdb.io/UafN7LHaBAQ7N5bNtXHfbj/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi       
 
   deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       - checkout
 
