--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,7 +217,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum -y install tar gzip
+            sudo apt -y update
+            sudo apt install -y tar gzip curl unzip
 
       - attach_workspace:
           at: ~/
