--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,19 +209,18 @@ jobs:
 
   deploy-frontend:
     docker:
-      # Docker image here that supports AWS CLI
-      - image: circleci/node:13.8.0
+      - image: amazon/aws-cli:2
     steps:
       - checkout
 
       - run:
           name: Install dependencies
           command: |
-            sudo apt -y update
-            sudo apt install -y tar gzip curl unzip
+            yum -y install tar gzip
 
       - attach_workspace:
           at: ~/
+
       - run:
           name: Get backend url
           command: |
@@ -231,14 +230,17 @@ jobs:
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env  
             cat frontend/.env    
 
-      - run:
-          name: Deploy frontend objects
-          command: |
-            cd frontend
-            npm install
-            npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive    
+      - image: circleci/node:14.17.6  # Node.js image
+        steps:
+          - run:
+              name: Install frontend dependencies
+              command: |
+                cd frontend
+                npm install
+                npm run build
+                tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+                aws s3 cp artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz s3://udapeople-"${CIRCLE_WORKFLOW_ID:0:7}" --recursive 
+
       
                                     
 workflows:
