--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,7 +225,7 @@ jobs:
       - run:
           name: Install Node.js and npm
           command: |
-            curl -sL https://rpm.nodesource.com/setup_14.x | sudo -E bash -
+            curl -sL https://rpm.nodesource.com/setup_14.x | bash -
             yum install -y nodejs
 
       - run:
