--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ workflows:
           requires: [deploy-infrastructure]  
       - run-migrations:
           requires: [configure-infrastructure]
-      - check-workspace-content  
+      - check-workspace-content:
           requires: [configure-infrastructure]  
              
            
