--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,8 +279,8 @@ workflows:
           requires: [deploy-infrastructure]  
       - run-migrations:
           requires: [configure-infrastructure]
-      - check-workspace-content:
-          requires: [configure-infrastructure]  
+      - deploy-frontend:
+          requires: [run-migrations]  
              
            
       
