--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,14 +247,14 @@ jobs:
             BACKEND_IP=$(aws ec2 describe-instances \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                --output text)
+                --output text | grep -v '\[web\]')
             echo $BACKEND_IP >> ./.circleci/ansible/inventory 
             cat ./.circleci/ansible/inventory
-            export BACKEND_IP=$(cat ./.circleci/ansible/inventory | sed 2d)
+            BACKEND_IP=$(echo "$BACKEND_IP" | tr -d '[:space:]')
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             mkdir -p frontend
-            echo "API_URL=http://${BACKEND_IP}:3030" > frontend/.env  
+            echo ${API_URL} > frontend/.env  
             cat frontend/.env   
 
                                        
