--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,7 +255,16 @@ jobs:
             echo "API_URL = ${API_URL}"
             mkdir -p frontend
             echo ${API_URL} > frontend/.env  
-            cat frontend/.env   
+            cat frontend/.env  
+
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz s3://udapeople-"${CIRCLE_WORKFLOW_ID:0:7}" --recursive       
 
                                        
 workflows:
