--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,10 @@ jobs:
   deploy-frontend:
     docker:
       - image: amazon/aws-cli
+
+    environment:
+      API_URL: ""  # Empty string as the default value  
+    
     steps:
       - checkout
 
@@ -263,8 +267,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz s3://udapeople-"${CIRCLE_WORKFLOW_ID:0:7}" --recursive       
+            aws s3 cp ./dist "s3://udapeople-"${CIRCLE_WORKFLOW_ID:0:7}" --recursive       
 
                                        
 workflows:
