--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,7 +267,8 @@ jobs:
             cd frontend
             npm install
             npm run build
-            aws s3 cp ./dist "s3://udapeople-"${CIRCLE_WORKFLOW_ID:0:7}" --recursive       
+            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
+    
 
                                        
 workflows:
