--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,6 +268,42 @@ jobs:
             npm install
             npm run build
             aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
+
+   deploy-backend:
+    docker:
+      - image: circleci/node:14.17.6
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["fd:5e:93:0d:93:89:ff:12:ee:3a:d5:fc:1d:d2:bd:27"]
+      - attach_workspace:
+          at: .
+       - run:
+          name: Install dependencies
+          command: |
+            apt -y update
+            apt install -y tar gzip curl unzip
+            apt install -y python3 python3-pip
+            python3 -m pip install --user ansible
+      - run:
+          name: Install aws-cli
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+       - attach_workspace:
+          at: ~/      
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            cd .circleci/ansible
+            echo "Contents  of the inventory file is -------"
+            cat inventory
+            ansible-playbook -i inventory deploy-backend.yml           
     
 
                                        
@@ -295,6 +331,8 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]  
+      - deploy-backend:
+          requires: [run-migrations]    
       
              
            
