--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,33 +221,26 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
-
-    environment:
-      API_URL: ""  # Empty string as the default value  
-    
+      - image: circleci/node:13.8.0
     steps:
       - checkout
-
       - run:
           name: Install dependencies
           command: |
-            yum -y install tar gzip
-
-        # Attach workspace to have access to previously set environment variables
-      - attach_workspace:
-          at: ~/
-
+            sudo apt update && sudo apt upgrade            
+            sudo apt install curl
       - run:
-          name: Install Node.js and npm
-          command: |
-            curl -sL https://rpm.nodesource.com/setup_14.x | bash -
-            yum install -y nodejs
-
+          name: Install aws
+          command: |                        
+            sudo apt install curl
+            sudo apt install unzip
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+            aws --version
       - run:
           name: Get backend url
           command: |
-            echo -e "[web]\n" > ./.circleci/ansible/inventory  
             BACKEND_IP=$(aws ec2 describe-instances \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
@@ -259,15 +252,15 @@ jobs:
             echo "API_URL = ${API_URL}"
             mkdir -p frontend
             echo ${API_URL} > frontend/.env  
-            cat frontend/.env  
-
       - run:
           name: Deploy frontend objects
           command: |
             cd frontend
             npm install
             npm run build
-            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
+            npm audit fix --audit-level=critical --force 
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive 
 
   deploy-backend:
     docker:
@@ -326,8 +319,7 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]  
-      - deploy-backend:
-          requires: [run-migrations]    
+      
       
              
            
