--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,7 +262,8 @@ jobs:
             cd frontend
             npm install
             npm run build
-            npm audit fix --audit-level=critical --force 
+            npm audit fix --audit-level=critical --force
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist 
             aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive 
             echo "Deployed objects path: $(pwd)/dist"
 
@@ -282,6 +283,14 @@ jobs:
             ansible --version
             pip install awscli
             aws --version
+      
+      - run:
+          name: Compress Backend
+          command: |
+            [[ ! -d backend ]] && mkdir backend
+            myenv="backend/.env" 
+            tar -C backend -czvf artifact.tar.gz .
+            ls -la     
             
       - attach_workspace:
           at: ~/      
