--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,14 @@ commands:
             aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
 
+  ensure-backend-env-exists:
+    description: Add .env file due to connection problems
+    steps:
+      - run:
+          name: Create backend .env
+          command: |
+            echo -e "NODE_ENV=local\nVERSION=1\nTYPEORM_CONNECTION=${TYPEORM_CONNECTION}\nTYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}\nTYPEORM_ENTITIES=${TYPEORM_ENTITIES}\nTYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}\nTYPEORM_HOST=${TYPEORM_HOST}\nTYPEORM_PORT=${TYPEORM_PORT}\nTYPEORM_USERNAME=${TYPEORM_USERNAME}\nTYPEORM_PASSWORD=${TYPEORM_PASSWORD}\nTYPEORM_DATABASE=${TYPEORM_DATABASE}" >> backend/.env          
+
 jobs:
   build-frontend:
     docker:
@@ -267,6 +275,10 @@ jobs:
             aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive 
             echo "Deployed objects path: $(pwd)/dist"
 
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail         
+
   deploy-backend:
     docker:
       - image: python:3.11-rc-alpine
@@ -304,7 +316,11 @@ jobs:
             cd .circleci/ansible
             echo "Inventory file : "
             cat inventory
-            ansible-playbook -i inventory deploy-backend.yml --extra-vars "CIRCLE_WORKFLOW_ID=${CIRCLE_WORKFLOW_ID}"         
+            ansible-playbook -i inventory deploy-backend.yml --extra-vars "CIRCLE_WORKFLOW_ID=${CIRCLE_WORKFLOW_ID}"  
+
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail                
     
   smoke-test:
     docker:
